cool footer with font icons

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./assets/css/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Quicksand:400,700" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.4.0.js" integrity="sha256-DYZMCC8HTC+QDr5QNaIcfR7VSPtcISykd+6eSmBW5qo=" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <title>Project-1</title>
 </head>
 <body>
@@ -26,7 +27,7 @@
                         <input type="text" class="form-control" id="destination"  placeholder="Where would like to go?">
                         <small id="emailHelp" class="form-text text-muted"></small>
                     </div> 
-                    <button id="btn-submit" type="submit">Let's go!</button>
+                    <button id="btn-submit" type="submit" href="#dump-pic-here" >Let's go!</button>
                 </form>
             </div>
         </div>
@@ -62,10 +63,37 @@
             </div>
     </div>
 
+<!-- Footer -->
+<footer class="page-footer font-small stylish-color-dark pt-4">
 
+    <!-- Social buttons -->
+    <ul class="list-unstyled list-inline text-center">
+      <li class="list-inline-item">
+        <a href="https://github.com/smprov22" class="btn-floating btn-fb mx-1">
+          <i class="fab fa-github"> Stephanie Provence</i>
+        </a>
+      </li>
+      <li class="list-inline-item">
+        <a href="https://github.com/Eddsonblanco"  class="btn-floating btn-tw mx-1">
+          <i class="fab fa-github"> Eddson Blanco</i>
+        </a>
+      </li>
+      <li class="list-inline-item">
+        <a href="https://github.com/kellidragon" class="btn-floating btn-dribbble mx-1">
+          <i class="fab fa-github"> Kelli Dragon</i>
+        </a>
+      </li>
+    </ul>
+    <!-- Social buttons -->
 
+    <!-- Copyright -->
+    <div class="footer-copyright text-center py-3">© 2019 Copyright
+     
+    </div>
+    <!-- Copyright -->
 
-
+</footer>
+<!-- Footer -->
 
 <!-- Bootstrap tooltips -->
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.4/umd/popper.min.js"></script>
