safety widget fixed

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
                 <!-- Safety Widget -->
                 <div id="dump-safety-here" class="col-3">
-                    
+                        <a class="teleport-widget-link" href="https://teleport.org/cities/aarhus/">Safety - Aarhus</a><script async class="teleport-widget-script" data-url="https://teleport.org/cities/aarhus/widget/crime/?currency=USD&citySwitcher=false" data-max-width="420" data-height="826" src="https://teleport.org/assets/firefly/widget-snippet.min.js"></script>
                         <!-- <a class="teleport-widget-link" href="https://teleport.org/cities/aarhus/">Safety - Aarhus</a><script async class="teleport-widget-script" data-url="https://teleport.org/cities/aarhus/widget/crime/?currency=USD" data-max-width="770" data-height="889" src="https://teleport.org/assets/firefly/widget-snippet.min.js"></script> -->
                         <!-- <a id="safety" class="teleport-widget-link">SAFETY</a><script async class="safety-widget-script" data-max-width="420" data-height="841"  src="https://teleport.org/assets/firefly/widget-snippet.min.js"></script>
                  -->
