--- a/index.html
+++ b/index.html
@@ -62,6 +62,11 @@
                     </div>
                 </div>    
             </div>
+            <div id="fbCities">
+              <ul id="previousCities">
+                
+              </ul>
+            </div>
     </div>
 
 <!-- Footer -->
@@ -96,6 +101,9 @@
 </footer>
 <!-- Footer -->
 
+<!--Firebase script link-->
+<script src="https://www.gstatic.com/firebasejs/5.10.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/5.10.1/firebase-firestore.js"></script>
 <!-- Bootstrap tooltips -->
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.4/umd/popper.min.js"></script>
 <!-- Bootstrap core JavaScript -->
