--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
                 
                 <div class="row d-flex flex-nowrap mt-2">
 
+                  <!-- delete this coment  -->
+
                     <!-- image is going here -->
                     <div id="dump-pic-here" class="col-12"></div>
 
