stehp changes carrousel great job

--- a/index.html
+++ b/index.html
@@ -34,12 +34,22 @@
     <!----------------COLLAPSE CARD-------------->
       <div  class="row">
                 
-                <div class="col-12 d-flex flex-wrap mt-2" id="dump-pic-here" >
-                    <!-- image is going here -->
-                </div>    
-                    <!-- <div id="dump-safety-here" class="col-6"> -->
-                    <!-- <a class="teleport-widget-link" href="https://teleport.org/cities/aarhus/">Safety - Aarhus</a><script async class="teleport-widget-script" data-url="https://teleport.org/cities/aarhus/widget/crime/?currency=USD&citySwitcher=false" data-max-width="420" data-height="826" src="https://teleport.org/assets/firefly/widget-snippet.min.js"></script> -->
-                                  
+        <div class="col-12 d-flex flex-wrap mt-2" id="dump-pic-here">
+          <!--Carousel starter code, need to link up src to jquery-->
+          <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
+            <div class="carousel-inner carousel-size">
+ 
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+        </div>
                       <!-- Outdoors Widget -->
                       <div id="dump-outdoor-here" class="col-6">
                               <a class="teleport-widget-link" href="https://teleport.org/cities/aarhus/"></a><script async class="teleport-widget-script" data-url="https://teleport.org/cities/aarhus/widget/outdoors/?currency=USD&citySwitcher=false" data-max-width="420" data-height="804" src="https://teleport.org/assets/firefly/widget-snippet.min.js"></script>
