--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="col-4">
                 <form>
                     <div class="form-group">
-                        <input type="text" class="form-control" id="destination"  placeholder="What city would like to see?">
+                        <input type="text" class="form-control mt-4" id="destination"  placeholder="What city would like to see?">
                         <small id="emailHelp" class="form-text text-muted"></small>
                     </div> 
                     <button id="btn-submit" type="submit" href="#dump-pic-here" >Let's go!</button>
@@ -37,7 +37,7 @@
         <div class="col-12 d-flex flex-wrap mt-2" id="dump-pic-here">
           <!--Carousel starter code, need to link up src to jquery-->
           <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
-            <div class="carousel-inner carousel-size">
+            <div id="" class="carousel-inner carousel-size">
  
             </div>
             <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
