--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <link href="https://fonts.googleapis.com/css?family=Quicksand:400,700|Bevan|Fredoka+One" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.4.0.js" integrity="sha256-DYZMCC8HTC+QDr5QNaIcfR7VSPtcISykd+6eSmBW5qo=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <title>Project-1</title>
+    <link rel="icon" type="image/png" sizes="96x96" href="assets/images/favicon-96x96.png">
+    <title>TRVL - WRITE A SIMPLE MSJ HERE </title>
 </head>
 <body>
     <div id="bg" class="animated flip slow">
@@ -57,14 +58,14 @@
                       
 
                       <!-- weather hereeee -->
-                      <div id="weather-here" class=" col-6 d-flex align-items-center justify-content-center  flex-column">
+                      <div id="weather-here" class=" col-6 d-flex align-items-center   flex-column">
                           <h3 id="CWeather"></h3>
-                          <div class="location m-3">
+                          <div class="location m-4">
                           </div>
-                          <div class="wind m-1">
+                          <div class="wind m-3">
                           </div>
                           <div class="temperature m-4">
-                              <h3 class="tmp-degree m-2"> </h3>
+                              <h3 class="tmp-degree m-3"> </h3>
                               <div class="temperature-description m-1 "></div>
                           </div>
                       </div>    
