--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <div id="bg" class="animated flip slow">
-        
+        <img src="assets/images/globe.png" class="globe">
     </div>
     <div class="container">
         <div class="row">
@@ -32,7 +32,7 @@
                 </form>
             </div>
         </div>
-    <!----------------COLLAPSE CARD-------------->
+  
       <div  class="row">
                 
         <div class="col-12 d-flex flex-wrap mt-2" id="dump-pic-here">
