--- a/index.html
+++ b/index.html
@@ -18,7 +18,14 @@
 <body>
     <div id="bg" class="animated flip slow">
         <img src="assets/images/globe.png" class="globe">
-    </div>
+      </div>
+    <div id="allLetters">
+        <img src="assets/images/T.png" class="letter">
+        <img src="assets/images/R.png" class="letter">
+        <img src="assets/images/V.png" class="letter">
+        <img src="assets/images/L.png" class="letter">
+        <img src="assets/images/period.png" class="letter">
+      </div>
     <div class="container">
         <div class="row">
             <div class="col-4"></div>
