working firebase add/delete

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <div class="col-4">
               <form>
                   <div class="form-group">
-                      <input type="text" class="form-control mt-4" id="destination"  placeholder="What city would like to see?">
+                      <input type="text" class="form-control mt-4" id="destination"  placeholder="What city would you like to see?">
                       <small id="emailHelp" class="form-text text-muted"></small>
                   </div> 
                   <button id="btn-submit" type="submit" href="#dump-pic-here" >Let's go!</button>
