css fixes + delays

--- a/index.html
+++ b/index.html
@@ -27,19 +27,19 @@
     </div>
     <div class="row" id="allLetters">
       <div class="col-2.4 T">
-        <img src="assets/images/T.png" class="letter animated bounceInDown delay-1s">
+        <img src="assets/images/T.png" class="letter animated bounceInDown fast">
       </div>
       <div class="col-2.4 R">
         <img src="assets/images/R.png" class="letter animated bounceInDown delay-1s">
       </div>
       <div class="col-2.4 V">
-        <img src="assets/images/V.png" class="letter animated bounceInDown delay-2s">
+        <img src="assets/images/V.png" class="letter animated bounceInDown  delay-2s">
       </div>
       <div class="col-2.4 L">
-        <img src="assets/images/L.png" class="letter animated bounceInDown delay-2s">
+        <img src="assets/images/L.png" class="letter animated bounceInDown delay-3s">
       </div>
       <div class="col-2.4 dot">
-        <img src="assets/images/period.png" class="letter animated bounceIn delay-3s">
+        <img src="assets/images/period.png" class="letter animated bounceIn delay-4s">
 
       </div>
     </div>
@@ -47,7 +47,7 @@
   <div class="container">
     <div class="row">
       <div class="col d-flex justify-content-center">
-        <form>
+        <form class="animated flipInY delay-4s">
           <div class="form-field form-group">
             <input type="text" class="form-control text-center" id="destination" required
               placeholder="What city would you like to see?">
