--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               placeholder="What city would you like to see?">
             <large id="emailHelp" class="form-text text-muted"></large>
           </div>
-          <button class="btn aqua-gradient" id="btn-submit" type="submit" href="#dump-pic-here">Let's go!</button>
+          <button class="btn blue-gradient" id="btn-submit" type="submit" href="#dump-pic-here">Let's go!</button>
           <p id=></p>
         </form>
       </div>
