for real final edits v2

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <div class="row tripRow">
       <h1 id="tripName"></h1>
     </div>
-    <div class="row">
+    <div class="row dotRow">
       <img src="assets/images/dots.png" id="dotOnLoad" class="animated slideInLeft slow">
     </div>
     
